@@ -124,10 +124,7 @@ public class DiagramDescriptionNodeAndEdgeDescriptionsPopulator implements IDiag
         return builder.nodeDescriptions(allNodeDescriptions)
                 .edgeDescriptions(edgeDescriptions)
                 .dropHandler(dropHandler)
-                .toolSections(this.toolProvider.getToolSections(id2NodeDescriptions, edgeDescriptions, siriusDiagramDescription, layers))
-                // We don't care about populating tools here, there are executed on the fly from the compatibility reconnection tool executor.
-                // We must add it here to support the conversion from the View MM which is not able to execute tool on the fly.
-                .tools(List.of());
+                .toolSections(this.toolProvider.getToolSections(id2NodeDescriptions, edgeDescriptions, siriusDiagramDescription, layers));
         // @formatter:on
     }
 
